# axelar-xrpl-relayer

./: .env_template  .gitignore  Cargo.toml  README.md  axelar.proto  ecosystem.config.js  gen-proto.sh  go.mod  go.sum  main.go
mock-axelar-relayer/: index.js  instrument.js  package-lock.json  package.json
mock-gmp-api/: README.md  index.js  instrument.js  package-lock.json  package.json  utils.js
mock-payload-cache/: README.md  index.js  package-lock.json  package.json  swagger.yaml
src/: config.rs  distributor.rs  error.rs  gmp_api.rs  gmp_types.rs  includer.rs  ingestor.rs  lib.rs  payload_cache.rs  queue.rs  subscriber.rs  utils.rs  xrpl_includer.rs  xrpl_ingestor.rs  xrpl_subscriber.rs
src/gmp_api/: gmp_types.rs  mod.rs
src/includer/: mod.rs
src/ingestor/: mod.rs  xrpl_ingestor.rs
src/subscriber/: mod.rs  xrpl_subscriber.rs
src/xrpl/: includer.rs  ingestor.rs  mod.rs  subscriber.rs  ticket_creator.rs  xrpl_includer.rs
