[package]
name = "axelar-xrpl-relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
async-stream = "0.3.6"
futures = "0.3.31"
lapin = "2.5.0"
serde_json = "1.0.133"
tokio = "1.41.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
xrpl_api = { git = "https://github.com/commonprefix/xrpl-sdk-rust", branch = "main", package = "xrpl_api" }
xrpl_ws_client = { git = "https://github.com/commonprefix/xrpl-sdk-rust", branch = "main", package = "xrpl_ws_client" }
xrpl_types = { git = "https://github.com/commonprefix/xrpl-sdk-rust", branch = "main", package = "xrpl_types" }
xrpl_http_client = { git = "https://github.com/commonprefix/xrpl-sdk-rust", branch = "main", package = "xrpl_http_client" }
xrpl_binary_codec = { git = "https://github.com/commonprefix/xrpl-sdk-rust", branch = "main", package = "xrpl_binary_codec" }
xrpl_amplifier_types = { git = "https://github.com/commonprefix/axelar-amplifier", branch = "xrpl", package = "xrpl-types" }
xrpl_gateway = { git = "https://github.com/commonprefix/axelar-amplifier", branch = "xrpl", package = "xrpl-gateway" }
xrpl_multisig_prover = { git = "https://github.com/commonprefix/axelar-amplifier", branch = "xrpl", package = "xrpl-multisig-prover" }
router_api = { git = "https://github.com/commonprefix/axelar-amplifier", branch = "xrpl", package = "router-api" }
multisig = { git = "https://github.com/commonprefix/axelar-amplifier", branch = "xrpl", package = "multisig" }
hex = "0.4.3"
reqwest = "0.12.9"
thiserror = "2.0.3"
error-stack = "0.5.0"
serde = "1.0.215"
libsecp256k1 = "0.7.1"
tokio-util = "0.7.12"
dotenv = "0.15.0"
uuid = "1.11.0"
redis = { version = "0.27.6", features = ["r2d2"] }
r2d2 = "0.8.10"
async-std = "1.13.0"

[dev-dependencies]
mockito = "1.6.1"
